--- a/app/views/layouts/_footer.html.slim
+++ b/app/views/layouts/_footer.html.slim
@@ -18,7 +18,10 @@ footer
       .row
         p.large-11.columns
           = t('.now_accepting_proposals_text')
-          = link_to t('.we_want_to_help'), start_path, class: 'button'
+          = t('.now_accepting_proposals_text1')
+          = t('.now_accepting_proposals_text2')
+          = t('.now_accepting_proposals_text3')
+          = t('.now_accepting_proposals_text4')
 
     .large-4.medium-4.columns.stay-in-touch
       h6
@@ -29,7 +32,7 @@ footer
         = link_to "Follow @#{::Configuration[:twitter_username]}", "http://twitter.com/#{::Configuration[:twitter_username]}", class: 'twitter-follow-button', data: { button: 'blue', :'text-color' => '#ffffff', :'link-color' => '#ffffff', width: '224px' }
       .facebook-box
         .fb-like data-href="#{Configuration['facebook_url']}" data-width="224" data-height="40" data-header="false" data-show-border="false" data-colorscheme="dark" data-layout="standard" data-action="like" data-show-faces="false" data-send="false"
-
+                       
   .row.subfooter
     .large-3.medium-3.columns
       = link_to Configuration[:company_name], root_url, title: Configuration[:company_name], class: 'logo'
